
* Fixed error in MySQL CRUDifier that prevented us form handling timestamp type of columns correctly.

* Changed the default connection database for MySQL from "sys" to "information_schema", since it's often more available regardless of user's permissions.

* Made table selector in CRUDifier larger, to accommodate for tables with longer names, trying to display entire table name.

* Fixed a severe error when serializing Datetime values to Hyperlambda.

* Updated entire project from .Net Core 2.2 to .Net Core 3

* Fixed several minor bugs



## Version 5.5.4

* Created Magic Scheduler. Notice, this is a BETA release of it, and the scheduler should _not_ be considered to be production ready quite yet.
  But for those wanting to try it out, it can be found in the menu of your dashboard under _"Scheduler"_.

* Fixed minor bugs in frontend, especially relating to checking if JWT token is expired or not, making sure user is never allowed access to the dashboard,
  unless the user is actually authenticated and authorized, with a JWT token that is not expired.



## Version 5.5.5

* Seriously refactored scheduler to allow for having multiple threads running concurrently, also implemented support for configuring
  max-threads, and a lot of other nifty changes and improvements to the scheduler.



## Version 5.5.6

* Implemented support for _"fire and forget"_ jobs in the scheduler, in addition to allowing the user to configure the scheduler such
  that it can take a folder as a path to where it serializes its tasks, which prevents saving every job, whenever a new job is created.

* Simplified the crudifier, and merging the MySQL and MS SQL Special implementations into one common files, to avoid repeating code.

* Allowing for expressions to [slots.signal].

* Allowing for both [mysql.connect] and [mssql.connect] to be given an empty or null connection string, at which a default a permissive
  initial catalogue will be chosen, depending upon the database type.